--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Speedometer</string>
+    <string name="app_name">Velora Drive</string>
     <string name="title_activity_maps">Map</string>
 </resources>
