fix: resolve all build errors - fix ValueListenableBuilder2 type inference and rebuild _buildSearchOverlay in home_screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Speedometer",
+  "appTitle": "Velora Drive",
   "settings": "Settings",
   "language": "Language",
   "selectLanguage": "Select Language",
