--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "സ്പീഡോമീറ്റർ",
+  "appTitle": "വെലോറ ഡ്രൈവ്",
   "settings": "ക്രമീകരണങ്ങൾ",
   "language": "ഭാഷ",
   "selectLanguage": "ഭാഷ തിരഞ്ഞെടുക്കുക",
