--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "ஸ்பீடோமீட்டர்",
+  "appTitle": "வெலோரா டிரைவ்",
   "settings": "அமைப்புகள்",
   "language": "மொழி",
   "selectLanguage": "மொழியைத் தேர்ந்தெடுக்கவும்",
