--- a/lib/l10n/app_te.arb
+++ b/lib/l10n/app_te.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "స్పీడోమీటర్",
+  "appTitle": "వెలోరా డ్రైవ్",
   "settings": "సెట్టింగులు",
   "language": "భాష",
   "selectLanguage": "భాషను ఎంచుకోండి",
