--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "स्पीडोमीटर",
+  "appTitle": "वेलोरा ड्राइव",
   "settings": "सेटिंग्स",
   "language": "भाषा",
   "selectLanguage": "भाषा चुनें",
